@@ -486,3 +486,4 @@ Issue #2019345 by johnv: Added error message when used workflow is deleted.
 Issue #2237125 by johnv: Added token 'workflow-state-age' from workflow_extensions.
 Issue #2237125 by johnv: Reordered functions in workflow.tokens.inc.
 Issue #0907442 by johnv: Fixed comment field can now be hidden, optional and (new!) required.
+Issue #2239189 by johnv: Fixed Anonymous author cannot set a state for new content.
